--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -277,7 +277,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../skydesign.jpg") top right no-repeat;
+  background: url("../burgerBlokade2.png") top right no-repeat;
   background-size: cover;
   position: relative;
 }
